# cppCodings

./: README.md
ClionProjects/PipelineTestC++11/: CMakeLists.txt  PipelineController.cpp  PipelineController.h  PipelineStage.cpp  PipelineStage.h  main.cpp
aspriseOCR/: asprise_ocr_api.h  main  main.cpp
bitwiseTest/: main  main.cpp
codilityTests/bitGap/: main  main.cpp
container/: main  main.cpp
embeddedPython/: main  main.cpp  test.py
fstreamTest/: main  main.cpp
ipfsAPITest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ipfsAPITest  main.cpp
ipfsAPITest/data/: a.txt  b.txt  c.txt  d.txt
moveSemantics/: main.cpp
mutexTest/: main.cpp
openSSL_RSA_Sign/: CMakeCache.txt  CMakeLists.txt  Makefile  akk.cpp  cmake_install.cmake  main.cpp  openSSL_RSA_Sign  privateKey.pem  publicKey.pem
opencv_qr/: image.cpp  video.cpp
outFileTest/: main  main.cpp
pugiXML_Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pugiXML_Test
referenceCopyTest/: main.cpp
signErrorCheck/: main.cpp
smartPtr/: main  main.cpp
toptal/: u1  u1.cpp
typeSizes/: sizes  sizes.cpp
wordDiffStats/: CMakeLists.txt
zxingCPP_Reader/: CMakeLists.txt  Notenspiegel.Calibri_12_S.scan.pdf.QR.xcf  main.cpp
zxingCPP_Writer/: CMakeLists.txt  main  main.cpp  mainOld.cpp
